[package]
name = "endbyte"
version = "0.1.0"
authors = ["Ognyan Makaveev (Iskra Initiative) makogn@proton.me"]
edition = "2021"
license = "MIT"
description = "A no_std compatible rust library for handling byte order conversions between different endianness formats."
repository = "https://github.com/Iskra-Initiative/endbyte"
homepage = "https://github.com/Iskra-Initiative/endbyte"
documentation = "https://docs.rs/endbyte"
readme = "readme.md"
keywords = ["endian", "byte-order", "no-std", "embedded", "conversion"]
categories = ["embedded", "no-std", "encoding"]

[dependencies]

# embedded test example - excluded from default test runs
[[example]]
name = "embedded_test"
required-features = ["embedded"]

# assembly test example
[[example]]
name = "asm_test"

[features]
# feature flag for embedded examples
embedded = []
